--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.4.5",
     "lodash": "^4.17.19",
     "vue": "^2.6.11",
+    "vue-good-table": "^2.20.0",
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.2.0",
     "vue2vis": "^0.0.18",
@@ -54,9 +55,15 @@
         "error",
         "never"
       ],
-      "indent": ["warn"],
-      "no-debugger": ["warn"],
-      "no-unused-vars": "off",
+      "indent": [
+        "warn"
+      ],
+      "no-debugger": [
+        "warn"
+      ],
+      "no-unused-vars": [
+        "off"
+      ],
       "max-len": [
         1,
         120
