--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.organization=fortitudetec
 sonar.projectKey=com.fortitudetec:elucidation-ui
 sonar.projectVersion=1.0
 sonar.sources=src
+
+sonar.javascript.lcov.reportPaths=coverage/clover.xml
