--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.projectKey=com.fortitudetec:elucidation-ui
 sonar.projectVersion=1.0
 sonar.sources=src
 
-sonar.javascript.lcov.reportPaths=coverage/clover.xml
+sonar.testExecutionReportPaths=test-report.xml
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
