--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "setupFiles": [
       "./tests/setupJest.js"
     ],
-    "testResultsProcessor": "jest-sonar-reporter"
+    "testResultsProcessor": "jest-sonar-reporter",
+    "coveragePathIgnorePatterns": ["/node_modules/", "/src/plugins/"]
   }
 }
