--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3": "^5.16.0",
     "element-theme-chalk": "^2.13.2",
     "element-ui": "^2.4.5",
     "jest-fetch-mock": "^3.0.3",
@@ -59,6 +60,18 @@
       "sourceType": "module"
     },
     "rules": {
+      "arrow-body-style": "off",
+      "no-underscore-dangle": "off",
+      "no-unused-expressions": "off",
+      "no-param-reassign": "off",
+      "no-return-assign": "off",
+      "no-return-reassign": "off",
+      "no-multi-assign": "off",
+      "no-plusplus": "off",
+      "prefer-arrow-callback": "off",
+      "space-before-function-paren": "off",
+      "space-infix-ops": "off",
+      "spaced-comment": "off",
       "comma-dangle": [
         "error",
         "never"
